--- a/collection_test_202.plist
+++ b/collection_test_202.plist
@@ -41,7 +41,7 @@
 				<key>subtitle</key>
 				<string>collection</string>
 				<key>title</key>
-				<string>COLLECTION TEST</string>
+				<string>委外催收测试</string>
 			</dict>
 		</dict>
 	</array>
